<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
<androidx.core.widget.NestedScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="net.ohmnibus.grimorium.fragment.SpellDetailFragment"
	tools:ignore="WebViewLayout">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/cl_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Details.Container"
		>
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:text="@string/lbl_foo_name"
			style="@style/Label.Header"
			/>

		<TextView
			android:id="@+id/tv_level"
			app:layout_constraintTop_toBottomOf="@+id/tv_title"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginTop="8dp"
			tools:text="@string/lbl_foo_level_long"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_reversible"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_level"
			app:layout_constraintLeft_toRightOf="@id/tv_level"
			android:text="@string/lbl_spell_reversible"
			style="@style/Label.Value.Reversible"
			/>

		<TextView
			android:id="@+id/tv_school"
			app:layout_constraintTop_toBottomOf="@+id/tv_level"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:text="@string/lbl_foo_school"
			style="@style/Label.Value.School"
			/>

		<CheckBox
			android:id="@+id/cb_preferred"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			style="@style/Details.Preferred"
			/>

		<TextView
			android:id="@+id/tv_sphere_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_school"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginTop="8dp"
			android:text="@string/lbl_spell_sphere"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_sphere"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_sphere_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_sphere_label"
			tools:text="@string/lbl_foo_sphere"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_range_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_sphere_label"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_goneMarginTop="8dp"
			android:text="@string/lbl_spell_range"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_range"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_range_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_range_label"
			tools:text="@string/lbl_foo_range"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_compo_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_range_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_spell_compo"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_compo"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_compo_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_compo_label"
			tools:text="@string/lbl_foo_compos"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_duration_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_compo_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_spell_duration"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_duration"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_duration_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_duration_label"
			tools:text="@string/lbl_foo_duration"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_cast_time_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_duration_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_spell_cast_time"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_cast_time"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_cast_time_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_cast_time_label"
			tools:text="@string/lbl_foo_cast_time"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_area_effect_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_cast_time_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_spell_area_effect"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_area_effect"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_area_effect_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_area_effect_label"
			tools:text="@string/lbl_foo_area_effect"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_saving_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_area_effect_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_spell_saving"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_saving"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_saving_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_saving_label"
			tools:text="@string/lbl_foo_saving"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_book"
			app:layout_constraintTop_toBottomOf="@+id/tv_saving_label"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:text="@string/lbl_foo_book"
			style="@style/Label.Value"
			/>

		<FrameLayout
			android:id="@+id/fl_ads"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			app:layout_constraintTop_toBottomOf="@+id/tv_book"
			app:layout_constraintLeft_toLeftOf="parent"
			android:minHeight="8dp"
			/>

		<WebView
			android:id="@+id/wv_body"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/fl_ads"
			app:layout_constraintLeft_toLeftOf="parent"
			style="@style/SpellDetails.WebView"
			/>

		<TextView
			android:id="@+id/tv_author"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/wv_body"
			app:layout_constraintRight_toRightOf="parent"
			tools:text="@string/lbl_foo_author"
			style="@style/Label.Value"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</layout>