<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
<androidx.core.widget.NestedScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="net.ohmnibus.grimorium.fragment.SourceDetailFragment"
	tools:ignore="WebViewLayout"
	>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Details.Container"
		>
		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="8dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:text="Title"
			style="@style/Label.Header"
			/>
		<TextView
			android:id="@+id/tv_version_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_title"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_source_version"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_version"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_version_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_version_label"
			tools:text="@string/lbl_source_version"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_namespace_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_version_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_source_namespace"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_namespace"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_namespace_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_namespace_label"
			tools:text="@string/lbl_source_namespace"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_uri_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_namespace_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_source_uri"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_uri"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_uri_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_uri_label"
			tools:text="@string/lbl_source_uri"
			style="@style/Label.Value"
			/>

		<TextView
			android:id="@+id/tv_elements_label"
			app:layout_constraintTop_toBottomOf="@+id/tv_uri_label"
			app:layout_constraintLeft_toLeftOf="parent"
			android:text="@string/lbl_source_elements"
			style="@style/Label.Name"
			/>
		<TextView
			android:id="@+id/tv_elements"
			app:layout_constraintBaseline_toBaselineOf="@+id/tv_elements_label"
			app:layout_constraintLeft_toRightOf="@+id/tv_elements_label"
			tools:text="@string/lbl_source_elements"
			style="@style/Label.Value"
			/>
		<WebView
			android:id="@+id/wv_body"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@+id/tv_elements_label"
			android:layout_marginTop="8dp"
			style="@style/Details.WebView"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
</layout>